# RustVault

./: README.md
medirust/: .env  Cargo.toml  TODO.md  diesel.toml  medirust.db
medirust/migrations/2025-08-24-141925_create_patients_and_health_records/: down.sql  up.sql
medirust/migrations/2025-08-24-143832_add_patient_keys_and_encrypted_record_fields/: down.sql  up.sql
medirust/src/: crypto.rs  handlers.rs  main.rs  models.rs  schema.rs
