[package]
name = "medirust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipfs-api = "0.15"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
anyhow = "1.0"
